overflow auto on addition of files fixed styling and updated template accordingly

--- a/assistant-calendar/src/app/create-schedule-page/import-schedule/import-schedule.component.css
+++ b/assistant-calendar/src/app/create-schedule-page/import-schedule/import-schedule.component.css
@@ -43,3 +43,7 @@ mat-icon{
   border-width: 1px;
   border-radius: 50%;
 }
+.dialogClass{
+  height: 509px;
+  width: 683px;
+}
